<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">VLAB Lookup</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="owner">Owner: </string>
    <string name="test">Test123 test</string>
    <string name="altitude">Altitude: </string>
    <string name="termsrv">Termsrv: </string>
    <string name="rpb">RPB: </string>
    <string name="btn_interfaces">Interfaces</string>
    <string name="editText_hint">Enter resource name</string>
    <string name="iface_title">Interfaces: </string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
